wubi (8.10) UNRELEASED; urgency=low

  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel
  * Refactored shared_backend.py into common/backend.py & friends
  * Added metalink parser

 -- Agostino Russo <agostino.russo@gmail.com>  Tue, 12 Aug 2008 08:32:50 +0100